# AiJobMatching

./: .gitignore  CMakeLists.txt  README.md  init.txt  instructions.txt  main,cpp  package-lock.json  package.json
Project/: Dice.html  Glassdoor.html  Indeed.html  LinkedIn.html  Monster.html  cookies.txt  response.html  response_page_1.html  scraper  scraper.cpp  testpqxx  testpqxx.cpp
Project /output/: jobs_20250519_213910.csv  jobs_20250519_213910.json  jobs_20250519_220626.csv  jobs_20250519_220626.json  jobs_20250519_224119.csv  jobs_20250519_224119.json
Project /scraper.dSYM/Contents/: Info.plist
Project /scraper.dSYM/Contents/Resources/DWARF/: scraper
Project /scraper.dSYM/Contents/Resources/Relocations/x86_64/: scraper.yml
include/: cv_job_matcher.hpp  embedding.hpp
path/to/: jobs.db
public/: jobs.json
scripts/: cv_processor.py
src/: App.css  App.js  cv_job_matcher.cpp  embedder.py  embedding.cpp  faiss_matcher.cpp  faiss_matcher.hpp  job_matcher.py  main.cpp  scrapper.cpp  sqlite_helper.cpp  sqlite_helper.hpp
src/components/: JobCard.js  JobList.js  Navbar.js
src/pages/: HomePage.js  JobDashboard.js  MatchedJobsPage.js  UploadCVPage.js
src/services/: api.js
